Add master multipaper server

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>MultiPaper-API</module>
         <module>MultiPaper-Server</module>
+        <module>MultiPaper-Master</module>
         <module>Paper${file.separator}Paper-MojangAPI</module> <!-- We don't plan on patching this, so this hack is good enough. -->
     </modules>
 </project>
