Fix github workflow

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [11, 8]
+        java: [11]
 
     steps:
     - uses: actions/checkout@v2
@@ -28,14 +28,14 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-maven-
 
-    - name: Patch Tuinity
+    - name: Patch MultiPaper
       run: |
         git config --global user.email "you@example.com"
         git config --global user.name "Your Name"
         git submodule update --init --recursive
-        ./tuinity jar
+        ./multipaper jar
         
     - uses: actions/upload-artifact@v2
       with:
-        name: Tuinity-PR${{ env.PR }}-JDK${{ matrix.java }}
-        path: tuinity-paperclip.jar
+        name: MultiPaper-PR${{ env.PR }}-JDK${{ matrix.java }}
+        path: multipaper-paperclip.jar
