--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-proxy</artifactId>
+            <artifactId>bungeecord-api</artifactId>
             <version>1.16-R0.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
