--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -35,8 +35,8 @@
         </dependency>
         <dependency>
             <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-proxy</artifactId>
-            <version>1.16-R0.4-SNAPSHOT</version>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.16-R0.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
