--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>MultiPaper-API</module>
         <module>MultiPaper-Server</module>
         <module>MultiPaper-Master</module>
-        <module>Paper${file.separator}Paper-MojangAPI</module> <!-- We don't plan on patching this, so this hack is good enough. -->
+        <!--module>Paper${file.separator}Paper-MojangAPI</module--> <!-- We don't plan on patching this, so this hack is good enough. -->
+        <module>Paper-MojangAPI</module> <!-- Paper removed pom.xml from their copy. -->
     </modules>
 </project>
