--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,52 @@
-# Concrete
-MultiPaper-Server
-MultiPaper-API
-mc-dev
-.idea
-testserver
-run
-current-paper
+.gradle/
+build/
+
+# Eclipse stuff
+.classpath
+.project
+.settings/
+
+# VSCode stuff
+.vscode/
+
+# netbeans
+nbproject/
+nbactions.xml
+
+# we use maven!
+build.xml
+
+# maven
+target/
+dependency-reduced-pom.xml
+
+# vim
+.*.sw[a-p]
+
+# various other potential build files
+build/
+bin/
+dist/
+manifest.mf
+
+# Mac filesystem dust
+.DS_Store/
 .DS_Store
-*.sh
 
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# IntelliJ
+# intellij
 *.iml
 *.ipr
 *.iws
 .idea/
 out/
 
-# Maven
-target/
+# Linux temp files
+*~
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# other stuff
+run/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+MultiPaper-Server
+MultiPaper-API
 
+!gradle/wrapper/gradle-wrapper.jar
