--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,8 +27,8 @@ jobs:
 
     - name: Patch MultiPaper
       run: |
-        git config --global user.email "lexivalestudios@gmail.com"
-        git config --global user.name "Lexivale Studios"
+        git config --global user.email "you@example.com"
+        git config --global user.name "Your Name"
         git submodule update --init --recursive
         ./multipaper jar
         
