--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,7 +30,7 @@ jobs:
         git config --global user.email "lexivalestudios@gmail.com"
         git config --global user.name "Lexivale Studios"
         git submodule update --init --recursive
-        
+        ./multipaper jar
         
     - uses: actions/upload-artifact@v2
       with:
