--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -38,3 +38,7 @@ jobs:
                   git config --global user.name "Github Actions"
                   ./gradlew applyPatches --stacktrace
                   ./gradlew build --stacktrace
+            - uses: actions/upload-artifact@v2
+              with:
+                  name: MultiPaper-JDK${{ matrix.java }}
+                  path: multipaper-paperclip.jar
