--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,10 +1,3 @@
-# Here lie dragons!
-#
-# Note that there is no artifact step in this script. We do not want Paperclip
-# jars to be built for every push & PR; our CI handles pushes to branches, while
-# PRs can themselves link to Paperclip jars if it is necessary. Official such
-# PRs will take use of testing builds.
-
 name: Build Paper
 on: [push, pull_request]
 
@@ -34,11 +27,7 @@ jobs:
                   restore-keys: ${{ runner.os }}-paper-2
             - name: Patch and build
               run: |
-                  git config --global user.email "no-reply@github.com"
-                  git config --global user.name "Github Actions"
+                  git config --global user.email "itsbitcraft@gmail.com"
+                  git config --global user.name "Lexivale"
                   ./gradlew applyPatches --stacktrace
                   ./gradlew build --stacktrace
-            - uses: actions/upload-artifact@v2
-              with:
-                  name: MultiPaper-JDK${{ matrix.java }}
-                  path: multipaper-paperclip.jar
