--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -31,3 +31,4 @@ jobs:
                   git config --global user.name "Lexivale"
                   ./gradlew applyPatches --stacktrace
                   ./gradlew build --stacktrace
+                  ./gradlew publishToMavenLocal
