--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,9 +30,11 @@ jobs:
         git config --global user.email "you@example.com"
         git config --global user.name "Your Name"
         git submodule update --init --recursive
-        ./multipaper jar
+        ./gradlew applyPatches
+        ./gradlew reobfJar
+        ./gradlew publishToMavenLocal
         
     - uses: actions/upload-artifact@v2
       with:
         name: MultiPaper-JDK${{ matrix.java }}
-        path: multipaper-paperclip.jar
+        path: MultiPaper-Master/build/libs/multipaper-paperclip.jar
