--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,11 +30,9 @@ jobs:
         git config --global user.email "you@example.com"
         git config --global user.name "Your Name"
         git submodule update --init --recursive
-        ./gradlew applyPatches
-        ./gradlew reobfJar
-        ./gradlew publishToMavenLocal
+        ./multipaper jar
         
     - uses: actions/upload-artifact@v2
       with:
         name: MultiPaper-JDK${{ matrix.java }}
-        path: MultiPaper-Master/build/libs/multipaper-paperclip.jar
+        path: multipaper-paperclip.jar
