--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [11]
+        java: [16]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,10 +27,12 @@ jobs:
 
     - name: Patch MultiPaper
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "khisabkurniawan@outlook.com"
+        git config --global user.name "Lexivale"
         git submodule update --init --recursive
-        ./multipaper jar
+        ./gradlew applyPatches
+        ./gradlew reobfJar
+        ./gradlew publishToMavenLocal
         
     - uses: actions/upload-artifact@v2
       with:
