--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -37,4 +37,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: MultiPaper-JDK${{ matrix.java }}
-        path: multipaper-paperclip.jar
+        path: MultiPaper-Master/build/libs
