--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -25,16 +25,27 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-maven-
 
-    - name: Patch MultiPaper
+    - name: Patch paperclipJar
       run: |
         git config --global user.email "khisabkurniawan@outlook.com"
         git config --global user.name "Lexivale"
         git submodule update --init --recursive
         ./gradlew applyPatches
-        ./gradlew reobfJar
-        ./gradlew publishToMavenLocal
+        ./gradlew paperclipJar
         
     - uses: actions/upload-artifact@v2
       with:
-        name: MultiPaper-JDK${{ matrix.java }}
+        name: paperclipJar
+        path: build/libs
+    
+    - name: Patch MultiPaper
+      run: |
+        git config --global user.email "khisabkurniawan@outlook.com"
+        git config --global user.name "Lexivale"
+        git submodule update --init --recursive
+        cd MultiPaper-Master && mvn
+    
+    - uses: actions/upload-artifact@v2
+      with:
+        name: MultiPaper
         path: MultiPaper-Master/build/libs
