--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,25 +27,19 @@ jobs:
 
     - name: Patch paperclipJar
       run: |
-        git config --global user.email "khisabkurniawan@outlook.com"
-        git config --global user.name "Lexivale"
-        git submodule update --init --recursive
         ./gradlew applyPatches
         ./gradlew paperclipJar
         
     - uses: actions/upload-artifact@v2
       with:
-        name: paperclipJar
+        name: paperclipJar-b101
         path: build/libs
     
     - name: Patch MultiPaper
       run: |
-        git config --global user.email "khisabkurniawan@outlook.com"
-        git config --global user.name "Lexivale"
-        git submodule update --init --recursive
-        cd MultiPaper-Master && mvn
+        cd .\MultiPaper-Master\ && mvn
     
     - uses: actions/upload-artifact@v2
       with:
-        name: MultiPaper
+        name: MultiPaper-b101
         path: MultiPaper-Master/build/libs
