--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: Patch paperclipJar
       run: |
+        git config --global user.email "lexivalestudios@gmail.com"
+        git config --global user.name "Lexivale"
         ./gradlew applyPatches
         ./gradlew paperclipJar
         
