Update and rename gradle-publish.yml to gradle-publish-MultiPaperProxy.yml

--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -24,22 +24,10 @@ jobs:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-maven-
-
-    - name: Patch paperclipJar
-      run: |
-        git config --global user.email "lexivalestudios@gmail.com"
-        git config --global user.name "Lexivale"
-        ./gradlew applyPatches
-        ./gradlew paperclipJar
-        
-    - uses: actions/upload-artifact@v2
-      with:
-        name: paperclipJar-b101
-        path: build/libs
     
     - name: Patch MultiPaper
       run: |
-        cd .\MultiPaper-Master\ && mvn
+        cd MultiPaper-Master && mvn
     
     - uses: actions/upload-artifact@v2
       with:
