--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -1,35 +1,17 @@
-name: Build main
+name: Java CI
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        java: [16]
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
-      with:
-        java-version: ${{ matrix.java }}
-
-    - uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven-
-    
-    - name: Patch MultiPaper
-      run: |
-        cd MultiPaper-Master && mvn
-    
-    - uses: actions/upload-artifact@v2
-      with:
-        name: MultiPaper-b101
-        path: MultiPaper-Master/build/libs
+      - uses: actions/checkout@v2
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots verify
