--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -14,4 +14,4 @@ jobs:
           java-version: '16'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn
