--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -32,6 +32,7 @@ jobs:
         ./gradlew applyPatches
         ./gradlew paperclipJar
         cd MultiPaper-Master && mvn
+        ./gradlew publishToMavenLocal
     
     - uses: actions/upload-artifact@v2
       with:
