--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -16,10 +16,10 @@
     </properties>
 
     <parent>
-        <artifactId>multipaper-parent</artifactId>
+        <artifactId>multipaper-master</artifactId>
         <groupId>puregero.multipaper</groupId>
-        <version>dev-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.0</version>
+        <relativePath>pom.xml</relativePath>
     </parent>
 
     <dependencies>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
-            <version>1.16-R0.4</version>
+            <version>1.17-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
