--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -29,12 +29,9 @@ jobs:
       run: |
         git config --global user.email "lexivalestudios@gmail.com"
         git config --global user.name "Lexivale"
-        ./gradlew applyPatches
-        ./gradlew paperclipJar
         cd MultiPaper-Master && mvn
-        ./gradlew publishToMavenLocal
     
     - uses: actions/upload-artifact@v2
       with:
-        name: MultiPaper-b101
+        name: MultiPaper-Master-b101
         path: MultiPaper-Master/build/libs
