--- a/.github/workflows/gradle-publish-MultiPaperProxy.yml
+++ b/.github/workflows/gradle-publish-MultiPaperProxy.yml
@@ -29,17 +29,7 @@ jobs:
       run: |
         git config --global user.email "lexivalestudios@gmail.com"
         git config --global user.name "Lexivale"
-        ./gradlew applyPatches
-        ./gradlew paperclipJar
-        ./gradlew cleanCache
-        ./gradlew patchPaperApi
-        ./gradlew patchPaperServer
-        ./gradlew rebuildPaperApi
-        ./gradlew rebuildPaperServer
-        ./gradlew rebuildPatches
-        ./gradlew runDev
-        ./gradlew runShadow
-        ./gradlew publishToMavenLocal
+        cd MultiPaper-Master && mvn clean install
     
     - uses: actions/upload-artifact@v2
       with:
