--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>multipaper-master</artifactId>
+    <groupId>puregero.multipaper</groupId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
     <name>MultiPaper-Server</name>
@@ -14,13 +15,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
-    <parent>
-        <artifactId>multipaper-master</artifactId>
-        <groupId>puregero.multipaper</groupId>
-        <version>1.0.0</version>
-        <relativePath>pom.xml</relativePath>
-    </parent>
 
     <dependencies>
         <dependency>
@@ -36,7 +30,7 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
+            <version>1.16-R0.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
