--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
-name: Generate Paperclip jar
+name: Generate Jars
 on: [ push, pull_request ]
 jobs:
-  build:
+  paperclip:
     # Only run on PRs if the source branch is on someone else's repo
     if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
     runs-on: ubuntu-latest
@@ -35,3 +35,23 @@ jobs:
         with:
           name: multipaper.jar
           path: build/libs/*.jar
+  multipaper-master:
+    # Only run on PRs if the source branch is on someone else's repo
+    if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Git Repository
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2.3.0
+        with:
+          distribution: 'temurin'
+          java-version: '16'
+      - name: Package MultiPaper-Master jar
+        working-directory: ./MultiPaper-Master
+        run: mvn package
+      - name: Upload MultiPaper-Master jar
+        uses: actions/upload-artifact@v2
+        with:
+          name: multipaper-master.jar
+          path: MultiPaper-Master/target/multipaper-master*.jar
