Dont run build on tag creation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Generate Jars
-on: [ push, pull_request ]
+on:
+  push:
+    tags-ignore:
+      - '**'
+  pull_request:
 jobs:
   paperclip:
     runs-on: ubuntu-latest
