Revert "Dont run build on tag creation"
This reverts commit c13901d099c41750318ce76dbcf37446a7405e78.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,5 @@
 name: Generate Jars
-on:
-  push:
-    tags-ignore:
-      - '**'
-  pull_request:
+on: [ push, pull_request ]
 jobs:
   paperclip:
     runs-on: ubuntu-latest
