Add peer-to-peer server connections

--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -36,6 +36,7 @@
     </dependencies>
 
     <build>
+        <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
