Rebase to 1.18-rc3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 group = puregero.multipaper
-version = 1.17.1-R0.1-SNAPSHOT
+version = 1.18-rc3-R0.1-SNAPSHOT
 
-mcVersion = 1.17.1
-packageVersion = 1_17_R1
-paperRef = 5af80b0ab83f6fd9ae48a80cd317e92718f11882
+mcVersion = 1.18-rc3
+packageVersion = 1_18_R1
+paperRef = 0fe06138210e9ed90439ef27eb7ed8af4d39fb13
 
+org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.vfs.watch=false
