Actually update upstream

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Apply Patches
         run: ./gradlew applyPatches --stacktrace
       - name: Build Paperclip jar
-        run: ./gradlew paperclipJar --stacktrace
+        run: ./gradlew createReobfPaperclipJar --stacktrace
       - name: Upload Paperclip jar
         uses: actions/upload-artifact@v2
         with:
