--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 group = puregero.multipaper
-version = 1.18-rc3-R0.1-SNAPSHOT
+version = 1.18-R0.1-SNAPSHOT
 
-mcVersion = 1.18-rc3
+mcVersion = 1.18
 packageVersion = 1_18_R1
-paperRef = 14b0c80d0d32b8ee59844b6244b37f578699761c
+paperRef = cd9fe9ca642322f8ba560a8c0f86c877af2cd10f
 
 org.gradle.caching=true
 org.gradle.parallel=true
