Update workflow to upload only the paperclip jar

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: multipaper.jar
-          path: build/libs/*.jar
+          path: build/libs/MultiPaper-paperclip-*-reobf.jar
   multipaper-master:
     runs-on: ubuntu-latest
     steps:
