--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,22 +6,12 @@ jobs:
     steps:
       - name: Checkout Git Repository
         uses: actions/checkout@v2
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
       - name: Set up JDK
-        uses: actions/setup-java@v2.3.0
+        uses: actions/setup-java@v2.3.1
         with:
-          distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
+          distribution: 'temurin'
       - name: Configure Git User Details
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
       - name: Apply Patches
@@ -39,10 +29,11 @@ jobs:
       - name: Checkout Git Repository
         uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2.3.0
+        uses: actions/setup-java@v2.3.1
         with:
-          distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
+          distribution: 'temurin'
       - name: Package MultiPaper-Master jar
         working-directory: ./MultiPaper-Master
         run: mvn package
