--- a/MultiPaper-Master/pom.xml
+++ b/MultiPaper-Master/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>multipaper-master</artifactId>
     <groupId>puregero.multipaper</groupId>
     <packaging>jar</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>MultiPaper-Server</name>
 
     <properties>
