--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: multipaper.jar
-          path: build/libs/*.jar
+          path: build/libs/MultiPaper-paperclip-*-reobf.jar
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
