Update build instructions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Apply Patches
         run: ./gradlew applyPatches --stacktrace
       - name: Build Paperclip jar
-        run: ./gradlew createReobfPaperclipJar --stacktrace
+        run: ./gradlew jar createReobfPaperclipJar --stacktrace
       - name: Upload Paperclip jar
         uses: actions/upload-artifact@v2
         with:
