--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Apply Patches
         run: ./gradlew applyPatches --stacktrace
       - name: Build Paperclip jar
-        run: ./gradlew createReobfPaperclipJar --stacktrace
+        run: ./gradlew jar createReobfPaperclipJar --stacktrace
       - name: Rebuild Patches
         run: ./gradlew rebuildPatches --stacktrace
       - name: Upload Paperclip jar
