Add Velocity support to master server

--- a/MultiPaper-Master/src/main/resources/plugin.yml
+++ b/MultiPaper-Master/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: MultiPaperProxy
-main: puregero.multipaper.server.bungee.MultiPaperProxy
+name: MultiPaperBungee
+main: puregero.multipaper.server.bungee.MultiPaperBungee
 version: 1.0.0
 author: PureGero
