Change time of daily upstream pull

--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -2,7 +2,7 @@ name: Update Upstream
 
 on:
   schedule:
-    - cron: '0 7 * * *' # Once a day at 5pm AEST
+    - cron: '0 15 * * *' # Once a day at 5pm GMT+2
   workflow_dispatch: # on button click
 
 jobs:
