--- a/.github/ISSUE_TEMPLATE/behavior-bug-or-plugin-incompatibility.yml
+++ b/.github/ISSUE_TEMPLATE/behavior-bug-or-plugin-incompatibility.yml
@@ -71,3 +71,4 @@ body:
         1. You are running the latest version of MultiPaper from [our downloads page](https://multipaper.io/download.html).
         2. You searched for and ensured there isn't already an open issue regarding this.
         3. Your version of Minecraft is supported by MultiPaper.
+        4. The bug is not reproducible on Paper.
