--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ group = puregero.multipaper
 version = 1.19.3-R0.1-SNAPSHOT
 mcVersion = 1.19.3
 
-paperRef = 035f9d71576522584dae333fba485752b1631de3
+purpurRef = 62c25ffbe8ae7ad1660a543c1dada02d78b50533
 
 org.gradle.caching=true
 org.gradle.parallel=true
