move master version into props file, include minecraft version / master version into jar file in master

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ mcVersion = 1.19.3
 
 purpurRef = 9940dcf74be5d871c452590943b4e269b3f3b666
 
+masterVersion = 2.11.0
+
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.vfs.watch=false
