--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ group = puregero.multipaper
 version = 1.20.6-R0.1-SNAPSHOT
 mcVersion = 1.20.6
 
-purpurRef = ed1e0ec889ff251ee0b5946d52d21ab5cd96e468
+shreddedpaperRef = c8021ad3df6f0da8defd6811cdc8f16c741b8c33
 
 databaseVersion = 3.X.X
 
