--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Configure Git User Details
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
       - name: Update Upstream Commit Hash
-        run: ./gradlew purpurRefLatest --stacktrace
+        run: ./gradlew shreddedpaperRefLatest --stacktrace
       - name: Apply Patches
         run: ./gradlew applyPatches --stacktrace
       - name: Build Paperclip jar
